--- a/.gitignore
+++ b/.gitignore
@@ -46,11 +46,14 @@ ExportedObj/
 *.mdb
 *.opendb
 *.VC.db
+.vscode/
 
 # Unity3D generated meta files
 *.pidb.meta
 *.pdb.meta
 *.mdb.meta
+*.cs.meta
+*.meta
 
 # Unity3D generated file on crash reports
 sysinfo.txt
