--- a/.gitignore
+++ b/.gitignore
@@ -49,11 +49,11 @@ ExportedObj/
 .vscode/
 
 # Unity3D generated meta files
-*.pidb.meta
-*.pdb.meta
-*.mdb.meta
-*.cs.meta
-*.meta
+#*.pidb.meta
+#*.pdb.meta
+#*.mdb.meta
+#*.cs.meta
+#*.meta
 
 # Unity3D generated file on crash reports
 sysinfo.txt
