--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,6 @@ ExportedObj/
 #*.pdb.meta
 #*.mdb.meta
 #*.cs.meta
-#*.meta
 
 # Unity3D generated file on crash reports
 sysinfo.txt
@@ -73,3 +72,6 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# MacOS files
+.DS_Store
